# Argos

./: .gitignore  CLAUDE.md  LICENSE  README.md  argos.config.example.yml  conftest.py  docker-compose.yml  requirements-all.txt  setup  setup.cmd
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Docs/: verify-phase2.md
backend/: __init__.py  pyproject.toml  requirements.txt
backend/correlation/: __init__.py  __main__.py  engine.py  models.py  persist.py  store.py
backend/detection/: __init__.py  __main__.py  engine.py  metrics.py  models.py  rules.py
backend/ingest/: __init__.py  consumer.py
backend/storage/: __init__.py  clickhouse.py  schema.sql
backend/tests/: test_correlation.py  test_correlation_integration.py  test_detection.py  test_detection_metrics.py  test_detection_watch.py  test_failure_loop_demo.py  test_integration.py  test_persist.py  test_transform.py
deploy/grafana/dashboards/: argos-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/prometheus/: prometheus.yml
docs/: PROJECT.md  demo.md
examples/: emit_bad_trace.py
examples/research-assistant/: .env.example  bedrock_client.py  pricing.py  requirements.txt  run_demo.py
examples/research-assistant/agents/: __init__.py  orchestrator.py  search.py  summarizer.py
examples/research-assistant/tools/: __init__.py  web_search.py
scripts/: bootstrap.py  setup  setup.cmd
sdk/: pyproject.toml
sdk/argos/: __init__.py  __main__.py  config.py  redaction.py  sinks.py  span.py  tracing.py
sdk/argos/cli/: __init__.py  checks.py  console.py  instrument.py  menu.py  setup.py
sdk/argos/protocols/: __init__.py  a2a.py  mcp.py
sdk/tests/: test_cli_instrument.py  test_cli_menu.py  test_cli_setup.py  test_config.py  test_placeholder.py  test_protocols.py  test_redaction.py  test_sinks.py  test_span.py  test_tracing.py
